--- a/styles.css
+++ b/styles.css
@@ -334,15 +334,12 @@ nav .container {
     padding: 0rem;
     margin-top: 1.0rem;
     margin-bottom: 1.0rem;
-    /*min-height: 90px;*/
 }
 
 .experience-logo-item img {
-    max-width: 200px; 
-    /*min-height: 70px;*/
     width: auto;
     object-fit: contain;
-    
+    height: 4.5rem; 
 }
 
 /* Affiliation logos - smaller, grid layout */
@@ -446,14 +443,12 @@ nav .container {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 150px;
 }
 
 .affiliation-item img {
     max-width: 100%;
-    max-height: 120px;
+    height: 3rem;
     width: auto;
-    height: auto;
     object-fit: contain;
 }
 
